--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "javascript_proj_new",
   "version": "1.0.0",
-  "description": "",
+  "description": "shark tank using chatgpt",
   "main": "index.js",
   "browserslist": [
     "defaults"
   ],
   "type": "module",
   "engines": {
-    "node": "14.x"
+    "node": "16.x"
   },
   "scripts": {
     "start": "node app.js",
